change sql scripts for payout